# foo_music_tagger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml
CMakeModules/: FindBeast.cmake  FindFoobar2000SDK.cmake  Findrapidjson.cmake  Utility.cmake
ConsoleTest/: CMakeLists.txt
ConsoleTest/Src/: main.cpp
MusicTagger/: CMakeLists.txt
MusicTagger/Include/MusicTagger/: Config.h  MusicTagger.h  Query.h  QueryInstance.h  QuerySourceFactory.h  QuerySourceInterface.h  Release.h
MusicTagger/Resource/json/: config.json
MusicTagger/Resource/json/site/: freedbjp.json  freedbmusicbrainz.json  musicbrainz.json
MusicTagger/Resource/json/validator/: configValaditor.json  extractValidator.json  resultValidator.json  siteValidator.json
MusicTagger/Src/: CddbQuerySource.cpp  CddbQuerySource.h  Config.cpp  JsonQuerySource.cpp  JsonQuerySource.h  Query.cpp  QueryInstance.cpp  QuerySourceBase.cpp  QuerySourceBase.h  QuerySourceFactory.cpp  Utility.cpp  Utility.h
Scripts/: installDependency.ps1
foo_music_tagger/: CMakeLists.txt
foo_music_tagger/Src/: ContextMenu.cpp  QueryThread.cpp  QueryThread.h  TaggerDialog.cpp  TaggerDialog.h  foo_music_tagger.cpp  foo_music_tagger.rc  resource.h  stdafx.h
